# torchbloom

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  lessons-from-biobloom.md  little-series-research.md  math-academy-research.md  repo-structure.md
docs/llm-wiki/: README.md  llm-wiki-design.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-03-udl-companion-wiki-mvp.md  2026-06-08-paddleocr-udl-ocr-evaluation.md  2026-06-09-udl-full-fusion-and-branding.md  2026-06-09-udl-full-textbook-fusion-rollout.md  2026-06-09-udl-hybrid-ocr-fusion-pilot.md  2026-06-10-udl-full-book-fusion-redo.md  2026-06-11-transformer-chapter-kg-pilot.md  README.md
docs/superpowers/specs/: 2026-06-11-transformer-web-mvp-design.md  (+6 more)
docs/udl-wiki/: README.md  authoring-guide.md  ocr-runbook.md  source-policy.md
raw/: README.md
raw/llm-wiki/: README.md
raw/udl/: README.md
src/torchbloom/: __init__.py  udl_answer_extract.py  udl_chapter_map.py  udl_fusion_pilot.py  udl_ocr_parse.py  udl_ocr_pipeline.py  udl_paddle_structure.py  udl_sources.py  wiki_validation.py
tests/: test_udl_answer_extract.py  test_udl_chapter_map.py  test_udl_fusion_pilot.py  test_udl_ocr_parse.py  test_udl_ocr_pipeline.py  test_udl_paddle_structure.py  test_udl_sources.py  test_wiki_validation.py
web/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/e2e/: transformer-course.spec.mjs
wiki/: README.md
wiki/llm-wiki/: audit-queue.md  index.md  methodology.md  schema.md
wiki/udl/: audit-queue.md  index.md  methodology.md  schema.md
(+1103 files in other folders)
